--- a/style.css
+++ b/style.css
@@ -1,3 +1,21 @@
+/* Reset */
+
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+body {
+    font-family: "Open Sans", sans-serif;
+    font-size: 10px;
+}
+
+ul, ol, li {
+    list-style: none;
+}
+
+/* Start */
 .text {
     background-color:  #4287f5;
     font-size: 20px;
